welcome.lessons.welcome.array.search.Extrema.scala.error
extrema:9: error: not found: value inf
    else if (x<inf){
               ^